--- a/css/main.css
+++ b/css/main.css
@@ -57,3 +57,16 @@ html {
   border-bottom: 0;
   border-radius: 6px 6px 0 0;
 }
+
+@media print {
+
+  .no-print {
+    display: none;
+    visibility: hidden;
+  }
+
+  .inset-img {
+    border-color: #000;
+  }
+
+}
